--- a/index.css
+++ b/index.css
@@ -1,3 +1,68 @@
 body {
     margin: 0;
+    background-color: #1F2937;
+    padding: 100px 50px;
+
+}
+
+h1 {
+    font-weight:800;
+    font-family: "Karla", sans-serif;
+    font-style: normal;
+    color: white;
+    margin: 0 auto;
+    text-shadow: 0px 0px 4px black;
+}
+
+#h1-green {
+    color: #4ADF86;   
+}
+
+h3 {
+    font-weight:normal;
+    color: lightgray;
+    margin: 10 auto;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+button {
+    background-color: #10B981;
+    color: white;
+    border-radius: 4px;
+    padding: 10px 15px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
+input {
+    color: #4ADF86;   
+    background-color: #2F3E53;
+    border-radius: 2px;
+    padding: 10px 15px;
+    border: none;
+    margin-right: 10px;
+    font-size: 16px;
+}
+
+hr {
+    border-top: 1px solid #2F3E53;
+    width: 390px;
+    text-align: left;
+    margin-left: 0;
+    /* margin-top: 40px; */
+}
+
+#formFields {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 40px;
+}
+
+#inputFields {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
 }
